src/main/java/iter2/grammar_v2/gen/Grammar_v2Parser.java
package iter2.grammar_v2.gen;// Generated from Grammar_v2.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Grammar_v2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHILESTMT=1, FORSTMT=2, IFSTMT=3, SWITCHSTMT=4, CASE=5, DEFAULT=6, NUMDCL=7, 
		STRDCL=8, CHARDCL=9, BOOLDCL=10, BREAK=11, BLANK=12, BOOLVAL=13, ID=14, 
		SAFETY=15, NUMVAL=16, CHARVAL=17, STRVAL=18, PLUS=19, MINUS=20, TIMES=21, 
		DIVISION=22, POW=23, SQUARE=24, MOD=25, PI=26, LPAR=27, RPAR=28, LBRACE=29, 
		RBRACE=30, DOT=31, COMMA=32, COLON=33, SEMI=34, SINGLEQOUTE=35, DOUBLEQOUTE=36, 
		ASSIGN=37, LEQ=38, GEQ=39, EQ=40, NEQ=41, LESS=42, GREATER=43, NOT=44, 
		AND=45, OR=46, HASHTAG=47, WS=48;
	public static final int
		RULE_prog = 0, RULE_declarations = 1, RULE_commands = 2, RULE_declaration = 3, 
		RULE_safedeclaration = 4, RULE_reassign = 5, RULE_params = 6, RULE_block = 7, 
		RULE_caseblock = 8, RULE_vdcl = 9, RULE_vassign = 10, RULE_vdclassign = 11, 
		RULE_command = 12, RULE_funccalls = 13, RULE_funcdcl = 14, RULE_callparams = 15, 
		RULE_ctrlstruct = 16, RULE_iterative = 17, RULE_selective = 18, RULE_iflogic = 19, 
		RULE_scase = 20, RULE_defcase = 21, RULE_forparams = 22, RULE_boolassignment = 23, 
		RULE_booldclassign = 24, RULE_booldecl = 25, RULE_numassignment = 26, 
		RULE_numdclassign = 27, RULE_numdecl = 28, RULE_charassignment = 29, RULE_chardclassign = 30, 
		RULE_chardecl = 31, RULE_stringassignment = 32, RULE_stringdclassign = 33, 
		RULE_stringdecl = 34, RULE_bexpr = 35, RULE_aexpr = 36, RULE_term = 37, 
		RULE_part = 38, RULE_bop = 39, RULE_vals = 40, RULE_numberval = 41, RULE_relop = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "declarations", "commands", "declaration", "safedeclaration", 
			"reassign", "params", "block", "caseblock", "vdcl", "vassign", "vdclassign", 
			"command", "funccalls", "funcdcl", "callparams", "ctrlstruct", "iterative", 
			"selective", "iflogic", "scase", "defcase", "forparams", "boolassignment", 
			"booldclassign", "booldecl", "numassignment", "numdclassign", "numdecl", 
			"charassignment", "chardclassign", "chardecl", "stringassignment", "stringdclassign", 
			"stringdecl", "bexpr", "aexpr", "term", "part", "bop", "vals", "numberval", 
			"relop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'while'", "'for'", "'if'", "'switch'", "'case'", "'default'", 
			"'number'", "'string'", "'char'", "'boolean'", null, null, null, null, 
			null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'pow'", "'sqrt'", 
			"'%'", "'pi'", "'('", "')'", "'{'", "'}'", "'.'", "','", "':'", "';'", 
			"'''", "'\"'", "'='", "'<='", "'>='", "'=='", "'!='", "'<'", "'>'", "'!'", 
			"'&&'", "'||'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHILESTMT", "FORSTMT", "IFSTMT", "SWITCHSTMT", "CASE", "DEFAULT", 
			"NUMDCL", "STRDCL", "CHARDCL", "BOOLDCL", "BREAK", "BLANK", "BOOLVAL", 
			"ID", "SAFETY", "NUMVAL", "CHARVAL", "STRVAL", "PLUS", "MINUS", "TIMES", 
			"DIVISION", "POW", "SQUARE", "MOD", "PI", "LPAR", "RPAR", "LBRACE", "RBRACE", 
			"DOT", "COMMA", "COLON", "SEMI", "SINGLEQOUTE", "DOUBLEQOUTE", "ASSIGN", 
			"LEQ", "GEQ", "EQ", "NEQ", "LESS", "GREATER", "NOT", "AND", "OR", "HASHTAG", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar_v2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Grammar_v2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			declarations();
			setState(87);
			commands();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				declaration();
				setState(90);
				declarations();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandsContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitCommands(this);
		}
	}

	public final CommandsContext commands() throws RecognitionException {
		CommandsContext _localctx = new CommandsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_commands);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHILESTMT:
			case FORSTMT:
			case IFSTMT:
			case SWITCHSTMT:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				command();
				setState(96);
				commands();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public SafedeclarationContext safedeclaration() {
			return getRuleContext(SafedeclarationContext.class,0);
		}
		public ReassignContext reassign() {
			return getRuleContext(ReassignContext.class,0);
		}
		public FuncdclContext funcdcl() {
			return getRuleContext(FuncdclContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				safedeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				reassign();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				funcdcl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SafedeclarationContext extends ParserRuleContext {
		public TerminalNode SAFETY() { return getToken(Grammar_v2Parser.SAFETY, 0); }
		public TerminalNode SEMI() { return getToken(Grammar_v2Parser.SEMI, 0); }
		public VdclContext vdcl() {
			return getRuleContext(VdclContext.class,0);
		}
		public VdclassignContext vdclassign() {
			return getRuleContext(VdclassignContext.class,0);
		}
		public List<TerminalNode> BLANK() { return getTokens(Grammar_v2Parser.BLANK); }
		public TerminalNode BLANK(int i) {
			return getToken(Grammar_v2Parser.BLANK, i);
		}
		public SafedeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_safedeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterSafedeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitSafedeclaration(this);
		}
	}

	public final SafedeclarationContext safedeclaration() throws RecognitionException {
		SafedeclarationContext _localctx = new SafedeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_safedeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(SAFETY);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BLANK) {
				{
				{
				setState(107);
				match(BLANK);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(113);
				vdcl();
				}
				break;
			case 2:
				{
				setState(114);
				vdclassign();
				}
				break;
			}
			setState(117);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReassignContext extends ParserRuleContext {
		public VassignContext vassign() {
			return getRuleContext(VassignContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(Grammar_v2Parser.SEMI, 0); }
		public List<TerminalNode> BLANK() { return getTokens(Grammar_v2Parser.BLANK); }
		public TerminalNode BLANK(int i) {
			return getToken(Grammar_v2Parser.BLANK, i);
		}
		public ReassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reassign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterReassign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitReassign(this);
		}
	}

	public final ReassignContext reassign() throws RecognitionException {
		ReassignContext _localctx = new ReassignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_reassign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BLANK) {
				{
				{
				setState(119);
				match(BLANK);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			vassign();
			setState(126);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<VdclContext> vdcl() {
			return getRuleContexts(VdclContext.class);
		}
		public VdclContext vdcl(int i) {
			return getRuleContext(VdclContext.class,i);
		}
		public List<TerminalNode> BLANK() { return getTokens(Grammar_v2Parser.BLANK); }
		public TerminalNode BLANK(int i) {
			return getToken(Grammar_v2Parser.BLANK, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Grammar_v2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Grammar_v2Parser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			vdcl();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BLANK) {
				{
				{
				setState(129);
				match(BLANK);
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(135);
				match(COMMA);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==BLANK) {
					{
					{
					setState(136);
					match(BLANK);
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(142);
				vdcl();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(Grammar_v2Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(Grammar_v2Parser.RBRACE, 0); }
		public List<SafedeclarationContext> safedeclaration() {
			return getRuleContexts(SafedeclarationContext.class);
		}
		public SafedeclarationContext safedeclaration(int i) {
			return getRuleContext(SafedeclarationContext.class,i);
		}
		public List<ReassignContext> reassign() {
			return getRuleContexts(ReassignContext.class);
		}
		public ReassignContext reassign(int i) {
			return getRuleContext(ReassignContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(LBRACE);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILESTMT) | (1L << FORSTMT) | (1L << IFSTMT) | (1L << SWITCHSTMT) | (1L << BLANK) | (1L << ID) | (1L << SAFETY))) != 0)) {
				{
				setState(152);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(149);
					safedeclaration();
					}
					break;
				case 2:
					{
					setState(150);
					reassign();
					}
					break;
				case 3:
					{
					setState(151);
					command();
					}
					break;
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseblockContext extends ParserRuleContext {
		public List<SafedeclarationContext> safedeclaration() {
			return getRuleContexts(SafedeclarationContext.class);
		}
		public SafedeclarationContext safedeclaration(int i) {
			return getRuleContext(SafedeclarationContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public TerminalNode BREAK() { return getToken(Grammar_v2Parser.BREAK, 0); }
		public CaseblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseblock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterCaseblock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitCaseblock(this);
		}
	}

	public final CaseblockContext caseblock() throws RecognitionException {
		CaseblockContext _localctx = new CaseblockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_caseblock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILESTMT) | (1L << FORSTMT) | (1L << IFSTMT) | (1L << SWITCHSTMT) | (1L << ID) | (1L << SAFETY))) != 0)) {
				{
				setState(161);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SAFETY:
					{
					setState(159);
					safedeclaration();
					}
					break;
				case WHILESTMT:
				case FORSTMT:
				case IFSTMT:
				case SWITCHSTMT:
				case ID:
					{
					setState(160);
					command();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BREAK) {
				{
				setState(166);
				match(BREAK);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VdclContext extends ParserRuleContext {
		public NumdeclContext numdecl() {
			return getRuleContext(NumdeclContext.class,0);
		}
		public ChardeclContext chardecl() {
			return getRuleContext(ChardeclContext.class,0);
		}
		public StringdeclContext stringdecl() {
			return getRuleContext(StringdeclContext.class,0);
		}
		public BooldeclContext booldecl() {
			return getRuleContext(BooldeclContext.class,0);
		}
		public VdclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vdcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterVdcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitVdcl(this);
		}
	}

	public final VdclContext vdcl() throws RecognitionException {
		VdclContext _localctx = new VdclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vdcl);
		try {
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMDCL:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				numdecl();
				}
				break;
			case CHARDCL:
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				chardecl();
				}
				break;
			case STRDCL:
				enterOuterAlt(_localctx, 3);
				{
				setState(171);
				stringdecl();
				}
				break;
			case BOOLDCL:
				enterOuterAlt(_localctx, 4);
				{
				setState(172);
				booldecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VassignContext extends ParserRuleContext {
		public NumassignmentContext numassignment() {
			return getRuleContext(NumassignmentContext.class,0);
		}
		public CharassignmentContext charassignment() {
			return getRuleContext(CharassignmentContext.class,0);
		}
		public StringassignmentContext stringassignment() {
			return getRuleContext(StringassignmentContext.class,0);
		}
		public BoolassignmentContext boolassignment() {
			return getRuleContext(BoolassignmentContext.class,0);
		}
		public VassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vassign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterVassign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitVassign(this);
		}
	}

	public final VassignContext vassign() throws RecognitionException {
		VassignContext _localctx = new VassignContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_vassign);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				numassignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				charassignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(177);
				stringassignment();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(178);
				boolassignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VdclassignContext extends ParserRuleContext {
		public NumdclassignContext numdclassign() {
			return getRuleContext(NumdclassignContext.class,0);
		}
		public ChardclassignContext chardclassign() {
			return getRuleContext(ChardclassignContext.class,0);
		}
		public StringdclassignContext stringdclassign() {
			return getRuleContext(StringdclassignContext.class,0);
		}
		public BooldclassignContext booldclassign() {
			return getRuleContext(BooldclassignContext.class,0);
		}
		public VdclassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vdclassign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).enterVdclassign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_v2Listener ) ((Grammar_v2Listener)listener).exitVdclassign(this);
		}
	}
